--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -1,4 +1,4 @@
 // for overriding colors
-$mainColor = #2b98f0
-$accentColor = $mainColor
+$mainColor = #009800
+$accentColor = #0098f9
 $sidebarActiveColor = #e6f7ff
