Changed color of the top navigation bar

--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -1,4 +1,9 @@
 // for overriding colors
-$mainColor = #009800
+$mainColor = #ffffff
 $accentColor = #0098f9
 $sidebarActiveColor = #e6f7ff
+$siteNameColor = #314659
+$siteNameBorderColor = #314659
+$inputTextColor = #314659
+$buttonBorderColor = #314659
+$buttonTextColor = #314659
