Added more information

--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -7,3 +7,4 @@ $siteNameBorderColor = #314659
 $inputTextColor = #314659
 $buttonBorderColor = #314659
 $buttonTextColor = #314659
+$picPath = "search1.svg"
